function-args-by-ref: Don't warn for deleted functions

BUG: 360112