tests/function-args-by-ref/main.cpp_fixed.cpp.expected
@@ -198,3 +198,8 @@ struct QDBusMessage
 {
     void createErrorReply(QString) {}
 };
+
+struct DeletedCtor // bug #360112
+{
+    Q_DISABLE_COPY(DeletedCtor)
+};
